<resources>
    <string name="app_name" translatable="false">Fair</string>
    <string name="the_maker" translatable="false">Kanedias</string>
    <string name="house_of_maker" translatable="false">House of Maker</string>
    <string name="gplv3" translatable="false">GPLv3</string>
    <string name="namespace_example" translatable="false"><![CDATA[dybr.ru/<address>]]></string>
    <string name="placeholder_long" translatable="false">Sample placeholder text</string>
    <string name="placeholder_short" translatable="false">Placeholder</string>
    <string name="placeholder_tags_huge" translatable="false">
        <![CDATA[
            #Seven #for #the #days #and #seven #for #the
            #nights #seven #for #the #heaven #and #the #tunnel
            #and #the #lights
        ]]>
    </string>
    <string name="placeholder_huge" translatable="false">
        <![CDATA[
            All eyes see the figure of the wizard\n
            As he climbs to the top of the world\n
            No sound as he falls instead of rising\n
            Time&apos;s standing still, then there&apos;s blood on the sand\n
        ]]>
    </string>
    <string name="placeholder_emoji" translatable="false">🏭</string>
    <string name="placeholder_date" translatable="false">10.13.2015</string>
    <string name="placeholder_number_short" translatable="false">1</string>
    <string name="placeholder_number_long" translatable="false">65536</string>
    <string name="placeholder_link" translatable="false">Link: www.example.com</string>
    <string name="zero" translatable="false">0</string>
    <string-array name="image_sizes">
        <item>100px</item>      
        <item>200px</item>      
        <item>300px</item>      
        <item>500px</item>      
        <item>800px</item>      
        <item>Full size</item>  
    </string-array>
    <string-array name="permission_types">
        <item>Visible for no one but you</item>  
        <item>Visible for registered</item>      
        <item>Visible for favorites</item>       
        <item>Visible for subscribers</item>     
        <item>Visible for all</item>             
    </string-array>
    <string-array name="notification_intervals_desc">
        <item>Never</item>                       
        <item>Every 15 minutes</item>            
        <item>Every hour</item>                  
        <item>Every 12 hours</item>              
        <item>Daily</item>                       
    </string-array>
    <string-array name="notification_intervals" translatable="false">
        <item>0</item>
        <item>15</item>
        <item>60</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string-array name="available_languages_desc" translatable="false">
        <item>Русский</item>                    
        <item>Беларуская</item>                 
        <item>Український</item>                
        <item>Deutsch</item>                    
        <item>English</item>                    
    </string-array>
    <string-array name="available_languages" translatable="false">
        <item>ru</item>
        <item>be</item>
        <item>uk</item>
        <item>de</item>
        <item>en</item>
    </string-array>
    <string-array name="available_text_sizes_desc">
        <item>Small</item>                      
        <item>Medium</item>                     
        <item>Big</item>                        
    </string-array>
    <string-array name="available_text_sizes" translatable="false">
        <item>14</item>
        <item>18</item>
        <item>22</item>
    </string-array>
    <string name="my_profile">My Profile</string>
    <string name="my_diary">My Diary</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="hello_plus_comma">Hello,</string>
    <string name="add_an_account">Add an account</string>
    <string name="guest">Guest</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="go_to">Go to…</string>
    <string name="configure_account">Configure account</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter">Enter</string>
    <string name="invalid_email">Invalid email</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="invalid_password">Invalid password</string>
    <string name="must_be_not_empty">Must be not empty</string>
    <string name="must_be_no_longer_than">Must not be longer than %d symbols</string>
    <string name="must_only_contain_alphanumeric">Must only contain hyphen, a–z and 0–9 characters</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="checking_in_progress">Checking…</string>
    <string name="checking_nickname">Checking nickname…</string>
    <string name="nickname_already_taken">Nickname already taken!</string>
    <string name="error_connecting">Error connecting</string>
    <string name="unexpected_website_error">Unexpected website error</string>
    <string name="checking_email">Checking email…</string>
    <string name="checking_namespace">Checking namespace…</string>
    <string name="email_already_registered">Email is already registered</string>
    <string name="namespace_already_taken">Namespace already taken</string>
    <string name="congrats_diary_registered">Congratulations, diary registered!</string>
    <string name="registration_failed">Registration failed :(</string>
    <string name="error_in_website_answer">Error in website answer</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="login_successful">Login successful</string>
    <string name="profile_not_found">Profile not found!</string>
    <string name="loading">Loading…</string>
    <string name="submitting">Submitting…</string>
    <string name="loading_profile">Loading profile…</string>
    <string name="please_wait">Please wait</string>
    <string name="logging_in">Logging in…</string>
    <string name="action">Action</string>
    <string name="favorite">Favorite</string>
    <string name="diary_title">Diary title</string>
    <string name="still_loading">Still loading…</string>
    <string name="entry_content">Entry content</string>
    <string name="entry_title">Entry title</string>
    <string name="submit">Submit</string>
    <string name="tos_accept">I accept Terms of Service</string>
    <string name="tos_not_accepted_error">ToS not accepted</string>
    <string name="i_am_over_eighteen">I am over eighteen</string>
    <string name="age_not_confirmed_error">Age not confirmed</string>
    <string name="next_steps">Next steps</string>
    <string name="registered_please_confirm_mail">Registration complete! Please check your email and follow activation instructions.</string>
    <string name="nickname">Nickname</string>
    <string name="birthday_dd_mm">Birthday: YYYY-MM-DD</string>
    <string name="must_be_in_iso_form">Must be YYYY-MM-DD</string>
    <string name="must_be_in_the_past">Must be in the past</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_new">Create new</string>
    <string name="new_profile">New profile</string>
    <string name="no_profiles_create_one">No profiles found for this account, create one?</string>
    <string name="confirm_action">Confirm action</string>
    <string name="confirm_profile_deletion">
        Confirm profile deletion.\n
        Warning: diary and all entries belonging to this profile will be deleted by this action!\n
        Write profile name (%s) in the input field to confirm.
    </string>
    <string name="confirm">Confirm</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="switch_profile">Switch profile</string>
    <string name="remove_profile">Remove profile</string>
    <string name="profile_created">Profile created</string>
    <string name="add_profile">Add profile</string>
    <string name="create_blog">Create blog</string>
    <string name="blog_address" translatable="false"><![CDATA[dybr.ru/<address>]]></string>
    <string name="blog_title">Blog title</string>
    <string name="blog_created">Blog created</string>
    <string name="add_blog">Add blog</string>
    <string name="my_blog">My Blog</string>
    <string name="preview">Preview</string>
    <string name="leave_crash_comment">Please describe your last performed action before the crash</string>
    <string name="app_crashed">Sorry, app just crashed</string>
    <string name="app_crash_report">Fair crash report</string>
    <string name="edit_entry">Edit entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="more_options">More options</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_updated">Entry updated</string>
    <string name="entry_created">Entry created</string>
    <string name="delete_comment">Delete comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="comment_content">Comment content</string>
    <string name="comment_updated">Comment updated</string>
    <string name="comment_created">Comment created</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="entry_menu">Entry menu</string>
    <string name="show_web_version">Show web version</string>
    <string name="bold_font">Bold font</string>
    <string name="italic_font">Italic font</string>
    <string name="underlined_font">Underlined font</string>
    <string name="strikethrough_font">Strikethrough font</string>
    <string name="insert_code_block">Insert code block</string>
    <string name="insert_quote_block">Insert quote block</string>
    <string name="insert_numbered_list">Insert numbered list</string>
    <string name="publish_entry">Publish entry</string>
    <string name="api_home_server">API home server</string>
    <string name="api_home_server_hint" translatable="false">http[s]://hostname[:port]/[endpoint]</string>
    <string name="api_home_server_sum">Don\'t change this if you don\'t know what you\'re doing</string>
    <string name="user_avatar">User\'s avatar</string>
    <string name="registration_date_label">Registration date:</string>
    <string name="apply_blog_theme">Apply blog theme</string>
    <string name="apply_blog_theme_on">The application will take blog theme if it\'s available</string>
    <string name="apply_blog_theme_off">The application won\'t change its theme</string>
    <string name="select_permission_type">Select permission type</string>
    <string name="add_tags">Add #tags</string>
    <string name="non_pinned_entry">Non-pinned entry</string>
    <string name="notifications_check_frequency">Notifications check frequency</string>
    <string name="notifications_check_frequency_sum">How often check for new notifications should be performed</string>
    <string name="user_preferred_language">User preferred language</string>
    <string name="needs_app_restart">Needs full app restart to work</string>
    <string name="join_date_label">Join date:</string>
    <string name="permissions_label">Permissions:</string>
    <string name="community_participant">Community participant</string>
    <string name="text_size">Text size</string>
    <string name="control_main_content_text_size">Control main content text size (requires app restart)</string>
</resources>