<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:icon="@drawable/home"
        android:key="home-server"
        android:defaultValue="https://dybr.ru/v2/"
        android:hint="@string/api_home_server_hint"
        android:title="@string/api_home_server"
        android:summary="@string/api_home_server_sum"/>

    <CheckBoxPreference
        android:icon="@drawable/community"
        android:key="apply-blog-theme"
        android:defaultValue="true"
        android:title="@string/apply_blog_theme"
        android:summaryOn="@string/apply_blog_theme_on"
        android:summaryOff="@string/apply_blog_theme_off"/>

    <ListPreference
        android:icon="@drawable/notification"
        android:key="notification-check-interval"
        android:defaultValue="15"
        android:title="@string/notifications_check_frequency"
        android:summary="@string/notifications_check_frequency_sum"
        android:entries="@array/notification_intervals_desc"
        android:entryValues="@array/notification_intervals"/>

    <ListPreference
        android:icon="@drawable/language"
        android:key="user-preferred-language"
        android:defaultValue=""
        android:title="@string/user_preferred_language"
        android:summary="@string/needs_app_restart"
        android:entries="@array/available_languages_desc"
        android:entryValues="@array/available_languages"/>

    <ListPreference
        android:icon="@drawable/text_size"
        android:key="user-preferred-text-size"
        android:defaultValue="14"
        android:title="@string/text_size"
        android:summary="@string/control_main_content_text_size"
        android:entries="@array/available_text_sizes_desc"
        android:entryValues="@array/available_text_sizes"/>

</PreferenceScreen>