<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/comment_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/user_avatar" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_avatar"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/placeholder_long"
            android:maxEms="18"/>

        <TextView
            android:id="@+id/profile_registration_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_avatar"
            android:layout_below="@id/profile_name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/registration_date_label"/>

        <TextView
            android:id="@+id/profile_registration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_registration_date_label"
            android:layout_alignBaseline="@id/profile_registration_date_label"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/placeholder_date"/>

        <ImageView
            android:id="@+id/community_join_button"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/community_join"
            android:visibility="gone"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>