<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_area"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/blog_bg_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignTop="@+id/entry_add_area"
        android:layout_alignBottom="@+id/entry_add_area"
        android:scaleType="centerCrop"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/entry_add_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="true"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:id="@+id/entry_title_text_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/entry_title_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:textAppearance="@android:style/TextAppearance.Medium"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <ViewSwitcher
                        android:id="@+id/entry_preview_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inAnimation="@android:anim/slide_in_left"
                        android:outAnimation="@android:anim/slide_out_right">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                layout="@layout/fragment_edit_form"
                                android:id="@+id/entry_editor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:id="@+id/tags_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:hint="@string/add_tags"
                                app:endIconMode="clear_text">

                                <com.hootsuite.nachos.NachoTextView
                                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                                    android:id="@+id/tags_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:completionThreshold="1"
                                    app:chipVerticalSpacing="3dp"
                                    app:chipTextSize="12dp"
                                    app:chipHeight="30dp" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/entry_permission_selector"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:entries="@array/permission_types"
                                android:text="@string/select_permission_type"/>

                            <CheckBox
                                android:id="@+id/entry_pinned_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"
                                android:text="@string/non_pinned_entry"
                                android:checked="false"/>

                            <CheckBox
                                android:id="@+id/entry_draft_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"
                                android:text="@string/publish_entry"
                                android:checked="true"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/entry_markdown_preview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="8dp"
                            android:textAppearance="@android:style/TextAppearance.Medium" />

                    </ViewSwitcher>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:id="@+id/entry_button_bar_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/entry_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="8dp"
                    android:foreground="?android:selectableItemBackground"
                    android:src="@drawable/cancel"
                    android:contentDescription="@android:string/cancel"
                    app:tint="@color/md_red_900"/>

                <ImageView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/entry_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="8dp"
                    android:foreground="?android:selectableItemBackground"
                    android:src="@drawable/post_preview"
                    android:contentDescription="@string/preview"/>

                <ImageView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/entry_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="8dp"
                    android:foreground="?android:selectableItemBackground"
                    android:src="@drawable/post_send"
                    android:contentDescription="@string/submit"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>